aks_module/charts-phppgadmin/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: in
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: "frontend.sangpham.tk"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: assignment-frontend-service
            port:
              number: 4200
  - host: "backend.sangpham.tk"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: assignment-backend-service
            port:
              number: 3000
  - host: "admin.sangpham.tk"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: php-service
            port:
              number: 8080
